# message-sending-service

./: README.MD  consumer.py  logs_base.py  main.py  pyproject.toml  schemas.py  send_mail.py  settings.py
